# vitali87-code-graph-rag

./: .env.example  .gitignore  AGENTS.md  CLEANUP_TODO.md  PYPI_README.md  README.md  mkdocs.yml  pyproject.toml  realtime_updater.py
.planning/phase-plans/: PHASE_8_HNSW_VSS.md
cgr/: __init__.py
codebase_rag/: cli_help.py  config.py  constants.py  cypher_queries.py  embedder.py  graph_updater.py  logs.py  main.py  parser_loader.py  types_defs.py  vector_store.py
codebase_rag/mcp/: server.py  tools.py
codebase_rag/parsers/: call_processor.py  call_resolver.py  function_ingest.py  import_processor.py
codebase_rag/parsers/py/: ast_analyzer.py
codebase_rag/services/: ladybug_ingestor.py  ladybug_schema.py
codebase_rag/storage/: centrality.py  vector_store.py  vector_store_arrow.py
codebase_rag/tests/: conftest.py  test_calls_provenance.py  test_centrality_storage.py  test_cgr_shim.py  test_docstring_format.py  test_duckdb_vector_store.py  test_duckdb_vector_store_arrow.py  test_embedder.py  test_function_ingest.py  test_graph_service.py  test_graph_service_calls_failure_logging.py  test_graph_updater_embeddings.py  test_graph_updater_parse_embedding.py  test_hnsw_scaffold.py  test_ladybug_ingestor_logger_noise.py  test_ladybug_vector_store.py  test_lm_studio_embedder.py  test_mcp_query_and_index.py  test_mcp_tools_helpers.py  test_memgraph_batching.py  test_node_relationship_coverage.py  test_parallel_calls.py  test_python_async_generator_classification.py  test_python_comprehension_scope.py  test_python_method_rebinding.py  test_reconcile_embeddings.py  test_reexports_resolution.py  test_reexports_rust_pub_use.py  test_reexports_wildcard_consumer.py  test_schema_migration_completeness.py  test_semantic_search.py  test_stat_cache.py  test_tsconfig_import_integration.py  test_tsconfig_resolver.py
codebase_rag/tests/fixtures/tsconfig_paths/: tsconfig.json
codebase_rag/tests/fixtures/tsconfig_paths/src/: App.ts
codebase_rag/tests/integration/: conftest.py  test_cypher_queries.py  test_imports_e2e.py  test_ladybug_e2e.py  test_multi_project_integration.py  test_node_label_e2e.py
codebase_rag/tools/: health_checker.py  semantic_search.py
codebase_rag/utils/: dependencies.py  path_utils.py
docs/: claude-code-setup.md  index.md
docs/architecture/: overview.md
docs/guide/: interactive-querying.md  mcp-server.md
docs/sdk/: overview.md  semantic-search.md
docs/spikes/: scip-typescript-2026-05-12.md
scripts/: BENCH_RESULTS_2026-04-27.md  CONFIG_AUDIT.md  bench_batched_embed.py  bench_bulk_insert.py  ladybug_smoke.py  profile_pass2_pass3.py  validate_coderank.py
